--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "breakpoint-helper": "^1.0.4",
     "faunadb": "^4.4.1",
     "iron-session": "^6.0.5",
     "joi": "^17.5.0",
-    "next": "12.0.7",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reactstrap": "^9.0.1",
